<resources>
    <string name="app_name">Waka book</string>
    <string name="facebook_app_id">414897979127979</string>
    <string name="fb_login_protocol_scheme">fb414897979127979</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="khosach">Kho sách</string>
    <string name="tusach">Tủ sách</string>
    <string name="canhan">Cá nhân</string>
    <string name="minimum_password">Mật khẩu phải lớn hơn 6 kí tự</string>
    <string name="auth_failed">Đăng nhập thất bại</string>
    <string name="text_header">Tuổi trẻ đáng giá bao nhiêu</string>
    <string name="title_name_book">Tuổi trẻ đáng giá bao nhiêu</string>
    <string name="author_book">Rosie Nguyễn</string>
    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor vulputate libero vitae iaculis.
		Curabitur id blandit quam. Praesent massa ante, pulvinar vitae sagittis commodo, scelerisque porttitor eros.
		Mauris suscipit a enim nec congue. Mauris tristique cursus aliquet. Nunc quis hendrerit nunc. Praesent tristique tellus purus,
		a pretium ex gravida id. Cras laoreet malesuada nulla, at bibendum metus ultricies a. Fusce eu ornare arcu. Proin ut molestie est.
		Vestibulum quis vehicula erat. Nam sed tempus nibh. Sed tortor ante, maximus venenatis odio sed, ultricies maximus lectus.
		Aliquam sed volutpat ligula. Integer bibendum, magna ac lacinia suscipit,
		risus libero rutrum justo, sed tempus augue tellus eget est. Curabitur convallis augue nisl,
		id efficitur urna posuere faucibus. Ut sed egestas nulla, eu finibus metus. Nunc a arcu ante.
		Aenean ullamcorper dolor non condimentum congue. Aenean mauris nunc, pellentesque at placerat vitae,
		aliquet quis orci. Curabitur maximus augue ut bibendum sagittis.
	</string>

    <string name="text_read_book">Sheryl Sandberg hiện là giám đốc hoạt động của facebook, là nhân vật đứng thứ hai sau tổng giám đốc và người sáng lập facebook. Cô được xem là một phụ nữ quyền lực ở thung lũng Silicon. Cô từng giữ chức vụ lớn tại Google, tại bộ Tài chính Mỹ.Thông qua quyển sách này, Sheryl Sandberg chia sẻ cuộc đời mình, những vươn lên cùng với thành công, để qua đó nhằm kêu gọi và truyền cảm hứng cho phụ nữ.  Theo đó, phụ nữ hãy dám dấn thân, dám ngồi vào bàn để cùng tranh luận, trao đổi và theo đuổi ước mơ của cuộc đời mình. Cũng qua quyển sách này, Sandberg cũng muốn chia sẻ suy nghĩ của mình về vai trò của phụ nữ và quá trình bình đẳng giới để mọi tầng lớp trong xã hội, đặc biệt là nam giới, cùng chia sẻ để hướng tới một xã hội bình đẳng hơn. Sheryl cũng cập nhật những số liệu ở Việt Nam, để cuốn sách phù hợp với độc giả và môi trường của Việt Nam. Tác giả cũng mời bà Tôn Nữ Thị Ninh viết lời giới thiệu cho ấn bản Việt Nam.</string>
    <string name="expand">Xem thêm</string>
    <string name="collapse">Thu gọn</string>
    <string name="title_activity_audio_book">AudioBookActivity</string>
    <string name="timeused">Thời gian đọc sách:</string>
    <string name="home">Home</string>
    <string name="thongtin">Thông tin bản quyền</string>
    <string name="bq">Thực hiện bởi nhóm LuLQuit</string>
    <string name="Email">Gmail: duc99iter@gmail.com</string>
    <string name="SDT">SĐT: 0383135586</string>
    <string name="DC">Địa chỉ: Hà Nội</string>
    <string name="example_title">Xóa sách</string>
    <string name="example_subtitle">Bạn có muốn cuốn sách hay này!</string>
    <string name="oke">Delete</string>
    <string name="dismiss">Cancel</string>
    <string name="username">Tên đăng nhập/Email</string>
    <string name="password">Mật khẩu</string>
    <string name="register">Đăng kí ngay</string>
    <string name="Forgot_Password">Quên mật khẩu?</string>
    <string name="login">Đăng nhập</string>
    <string name="or">Hoặc</string>
    <string name="todo">TODO</string>
</resources>
