<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context="com.gioidev.wakabook.Activities.Manhinhchao.In4Activity">
    <TextView
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/thongtin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:src="@drawable/fpoly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/bq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="30dp"
    android:textSize="30dp"
    android:gravity="center"
    android:text="@string/SDT"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/DC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>