<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gioidev.wakabook.Activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/inputemail"
            android:layout_width="350dp"
            android:inputType="textEmailAddress"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/bgbtn1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:drawableStart="@drawable/iconfinder_username"
            android:paddingStart="8dp"
            android:hint="@string/username"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputpassword"
            android:drawableStart="@drawable/iconfinder_password"
            android:drawableLeft="@drawable/iconfinder_password"
            android:inputType="textPassword"
            android:layout_width="351dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="40dp"
            android:background="@drawable/bgbtn1"
            android:paddingStart="22dp"
            android:paddingEnd="20dp"
            android:drawablePadding="15dp"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/register"
            android:textColor="#212121"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/btnreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:text="@string/Forgot_Password"
            android:textColor="#212121"
            android:textSize="19sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/bgbtn"
        android:onClick="Login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/color2"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/or"
            android:textSize="25sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#000000" />
    </LinearLayout>

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/loginfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:src="@drawable/iconfinder_facebook"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/logingoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:src="@drawable/icon_google"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        android:layout_marginBottom="30dp" />
<!--    <com.google.android.gms.common.SignInButton-->
<!--        android:id="@+id/googleButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->
</LinearLayout>
</androidx.core.widget.NestedScrollView>