<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/materialup.appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|snap">

                <ImageView
                    android:id="@+id/image_background_src"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_book"
                    android:tint="#BB2E2E30"
                    app:layout_collapseMode="parallax" />
                <ImageView
                    android:id="@+id/src_image"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_book"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>



            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <TextView
                    android:id="@+id/tv_name_book"
                    android:layout_width="fill_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center"
                    android:text="@string/title_name_book"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_name_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/author_book"
                    android:textColor="#222020" />
                ​</LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem" />
        </com.google.android.material.appbar.AppBarLayout>
        ​
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/flfavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:elevation="8dp"
            android:src="@drawable/iconfinder_favorite"
            app:layout_anchor="@id/collapsing"
            app:layout_anchorGravity="bottom|right|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>